--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">DroneFlight</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_drone_map">Drone Map</string>
+    <string name="turn">Turn</string>
 </resources>
