--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_drone_map">Drone Map</string>
     <string name="turn">Turn</string>
+    <string name="launch">Launch</string>
+    <string name="showScript">Show Script</string>
 </resources>
